# geojson-stats

./: .gitignore  README.md  geojson-stats.py  mkdocs.yml  pyproject.toml
docs/css/: extra.css
example/: html_stats.py  roads_stats_tpl.html  stats_building_tpl.html  stats_tpl.html  waterway_stats_tpl.html
geojson_stats/: __init__.py  __version__.py  cli.py  datautils.py  geoutils.py  html.py  models.py  stats.py
